--- a/MvvmTools/packages.config
+++ b/MvvmTools/packages.config
@@ -34,11 +34,15 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727-pre" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.10.0" version="10.0.30319" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.11.0" version="11.0.50727" targetFramework="net451" />
   <package id="Microsoft.VisualStudio.Threading" version="14.0.50522-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.0.23107" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50417-pre" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="RavenDB.Client" version="3.0.3794-Unstable" targetFramework="net451" />
+  <package id="RavenDB.Client.UniqueConstraints" version="3.0.3794-Unstable" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net45" />
 </packages>
