--- a/MvvmTools.Core/MvvmTools.Core.csproj
+++ b/MvvmTools.Core/MvvmTools.Core.csproj
@@ -219,18 +219,6 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <HintPath>..\packages\RavenDB.Client.3.0.3794-Unstable\lib\net45\Raven.Abstractions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Raven.Client.Lightweight, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <HintPath>..\packages\RavenDB.Client.3.0.3794-Unstable\lib\net45\Raven.Client.Lightweight.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Raven.Client.UniqueConstraints, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <HintPath>..\packages\RavenDB.Client.UniqueConstraints.3.0.3794-Unstable\lib\net45\Raven.Client.UniqueConstraints.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="ReactiveUI">
       <HintPath>..\lib\ReactiveUI.dll</HintPath>
     </Reference>
@@ -311,6 +299,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\FolderDialogBehavior.cs" />
+    <Compile Include="Controls\TextBoxEx.cs" />
     <Compile Include="Converters\BoolInvertedConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\FalseToVisibleConverter.cs" />
@@ -318,6 +307,7 @@
     <Compile Include="Converters\NullToVisibleConverter.cs" />
     <Compile Include="Converters\ProjectDisplayNameConverter.cs" />
     <Compile Include="Models\CDataWrapper.cs" />
+    <Compile Include="Models\Field.cs" />
     <Compile Include="Models\Template.cs" />
     <Compile Include="Services\IOutputService.cs" />
     <Compile Include="Services\ParseError.cs" />
@@ -326,6 +316,7 @@
     <Compile Include="Utilities\ProjectExtensions.cs" />
     <Compile Include="Utilities\SourceControlUtilities.cs" />
     <Compile Include="Utilities\TaskExtensions.cs" />
+    <Compile Include="Utilities\UiUtilities.cs" />
     <Compile Include="Utilities\ValidationUtilities.cs" />
     <Compile Include="Utilities\VsConstants.cs" />
     <Compile Include="Utilities\VsUtilities.cs" />
@@ -347,6 +338,9 @@
     <Compile Include="Utilities\PathUtilities.cs" />
     <Compile Include="ViewModels\BaseDialogViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\CheckedItemViewModel.cs" />
+    <Compile Include="ViewModels\CheckListUserControlViewModel.cs" />
+    <Compile Include="ViewModels\FieldDialogViewModel.cs" />
     <Compile Include="ViewModels\LocationScaffoldUserControlViewModel.cs" />
     <Compile Include="ViewModels\OptionsViewModel.cs" />
     <Compile Include="ViewModels\LocationDescriptorUserControlViewModel.cs" />
@@ -355,11 +349,14 @@
     <Compile Include="ViewModels\SelectFileDialogViewModel.cs" />
     <Compile Include="ViewModels\StringDialogViewModel.cs" />
     <Compile Include="ViewModels\StringViewModel.cs" />
-    <Compile Include="ViewModels\TemplateViewModel.cs" />
+    <Compile Include="ViewModels\TemplateDialogViewModel.cs" />
     <Compile Include="ViewModels\TestPresentationModel.cs" />
-    <Compile Include="ViewModels\ValueDescriptor.cs" />
+    <Compile Include="Models\ValueDescriptor.cs" />
     <Compile Include="Views\BusyUserControl.xaml.cs">
       <DependentUpon>BusyUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CheckListUserControl.xaml.cs">
+      <DependentUpon>CheckListUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CircularProgressBar.xaml.cs">
       <DependentUpon>CircularProgressBar.xaml</DependentUpon>
@@ -387,6 +384,9 @@
     </Compile>
     <Compile Include="Views\ScaffoldDialog.xaml.cs">
       <DependentUpon>ScaffoldDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TemplateDialog.xaml.cs">
+      <DependentUpon>TemplateDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\StringDialog.xaml.cs">
       <DependentUpon>StringDialog.xaml</DependentUpon>
@@ -429,11 +429,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\Validation.xaml">
+    <Page Include="Styles\TextBoxEx.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\BusyUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CheckListUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -473,6 +477,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\TemplateDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\StringDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -500,7 +508,9 @@
       <Name>MvvmTools.Shared</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Attached\" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="InternalTemplates.xml" />
   </ItemGroup>
